mejoro un poco la vista de home

--- a/views/home.html
+++ b/views/home.html
@@ -116,7 +116,7 @@
         </section>
     </main>
     <footer class="contenedor">
-        <section>
+        <section class="contenedor1">
             <i id="card" class="fas fa-credit-card"></i>
             <div class="tarjeta">
                 <h2>Pagá con tarjeta o en efectivo</h2>
@@ -127,7 +127,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="contenedor1">
             <i id="envio-gratis" class="fas fa-gift"></i>
             <div class="tarjeta">
                 <h2>Envío gratis desde $ 2.500</h2>
@@ -137,7 +137,7 @@
                 <p class="parrafo">un beneficio de Mercado Puntos.</p>
             </div>
         </section>
-        <section>
+        <section class="contenedor1">
             <i id="seguridad" class="fas fa-user-shield"></i>
             <div class="tarjeta">
                 <h2>Seguridad, de principio a fin</h2>
