--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -74,6 +74,7 @@ header{
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
+    height: 250px;
 }
 .boton{
     background-color: white;
@@ -89,6 +90,8 @@ li{
     display: inline;
     position: relative;
     top: 20px;
+    position: relative;
+    right: 10px;
 }
 a{
     color: black;
@@ -186,7 +189,11 @@ header{
 }
 h1{
     position: absolute;
-    bottom: -700px;
-    left: 90%;
+    top: 1700px;
+    right: 41%;
     font-size: 15px;
+}
+.contenedor1{
+    position: relative;
+    left: 5%;
 }
